hphp/hack/test/typecheck/readonly/foreach.php.exp
File "foreach.php", line 18, characters 5-18:
This expression is readonly, its members cannot be modified (Parsing[1002])
